--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
-    <link href="/common.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/static/fonts/stylesheet.css" />
-    <link rel="shortcut icon" href="/static/images/favicon.ico">
+    <link href="/project-1/common.css" rel="stylesheet" />
+    <link href="/project-1/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/project-1/static/fonts/stylesheet.css" />
+    <link rel="shortcut icon" href="/project-1/static/images/favicon.ico">
     <title>Portfolio</title>
     <meta name="description" content="Portfolio" />
 </head>
@@ -145,13 +145,13 @@
                     </div>
                     <picture class="slider__image">
                         <source
-                            srcset="/static/images/one-image-slider-mobile.png, /static/images/one-image-slider-mobile-2x.png 2x"
+                            srcset="/project-1/static/images/one-image-slider-mobile.png, /project-1/static/images/one-image-slider-mobile-2x.png 2x"
                             media="(max-width:640px)">
                         <source
-                            srcset="/static/images/one-image-slider-tablet.png, /static/images/one-image-slider-tablet-2x.png 2x"
+                            srcset="/project-1/static/images/one-image-slider-tablet.png, /project-1/static/images/one-image-slider-tablet-2x.png 2x"
                             media="(max-width:768px)">
-                        <img src="/static/images/one-image-slider.png"
-                            srcset="/static/images/one-image-slider.png, /static/images/one-image-slider-2x.png 2x"
+                        <img src="/project-1/static/images/one-image-slider.png"
+                            srcset="/static/images/one-image-slider.png, /project-1/static/images/one-image-slider-2x.png 2x"
                             alt="images slider" width="635" height="461">
                     </picture>
                 </div>
@@ -245,14 +245,14 @@
         <section class="guarantee container">
             <div class="guarantee__img-wrapper">
                 <picture class="guarantee__img">
-                    <source srcset="/static/images/divelery-mobile.jpg 335w, /static/images/divelery-mobile-2x.jpg 670w"
+                    <source srcset="/project-1/static/images/divelery-mobile.jpg 335w, /project-1/static/images/divelery-mobile-2x.jpg 670w"
                         media="(max-width:375px)" sizes="335px">
-                    <source srcset="/static/images/divelery.jpg 583w, /static/images/divelery-2x.jpg 1166w"
+                    <source srcset="/project-1/static/images/divelery.jpg 583w, /project-1/static/images/divelery-2x.jpg 1166w"
                         media="(max-width:640px)" sizes="120vw">
-                    <source srcset="/static/images/divelery-tablet.jpg 258w, /static/images/divelery-tablet-2x.jpg 516w"
+                    <source srcset="/project-1/static/images/divelery-tablet.jpg 258w, /project-1/static/images/divelery-tablet-2x.jpg 516w"
                         media="(max-width:1023px)" sizes="258px">
-                    <img src="/static/images/divelery.jpg"
-                        srcset="/static/images/divelery.jpg 480w, /static/images/divelery-2x.jpg 960w" alt="divelery"
+                    <img src="/project-1/static/images/divelery.jpg"
+                        srcset="/project-1/static/images/divelery.jpg 480w, /project-1/static/images/divelery-2x.jpg 960w" alt="divelery"
                         sizes="480px">
                 </picture>
 
@@ -295,16 +295,16 @@
                         <span class="visibility-hidden">Follow to partner</span>
                         <picture class="parters__img">
                             <source
-                                srcset="/static/images/partners/partners-mail-mobile.png, /static/images/partners/partners-mail-mobile-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-mail-mobile.png, /project-1/static/images/partners/partners-mail-mobile-2x.png 2x"
                                 media="(max-width:375px)">
                             <source
-                                srcset="/static/images/partners/partners-mail.png, /static/images/partners/partners-mail-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-mail.png, /project-1/static/images/partners/partners-mail-2x.png 2x"
                                 media="(max-width:640px)">
                             <source
-                                srcset="/static/images/partners/partners-mail-tablet.png, /static/images/partners/partners-mail-tablet-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-mail-tablet.png, /project-1/static/images/partners/partners-mail-tablet-2x.png 2x"
                                 media="(max-width:768px)">
-                            <img src="/static/images/partners/partners-mail.png"
-                                srcset="/static/images/partners/partners-mail.png, /static/images/partners/partners-mail-2x.png 2x"
+                            <img src="/project-1/static/images/partners/partners-mail.png"
+                                srcset="/project-1/static/images/partners/partners-mail.png, /project-1/static/images/partners/partners-mail-2x.png 2x"
                                 alt="partners mail" width="193" height="60">
                         </picture>
                     </a>
@@ -314,16 +314,16 @@
                         <span class="visibility-hidden">Follow to partner</span>
                         <picture class="parters__img">
                             <source
-                                srcset="/static/images/partners/partners-apple-mobile.png, /static/images/partners/partners-apple-mobile-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-apple-mobile.png, /project-1/static/images/partners/partners-apple-mobile-2x.png 2x"
                                 media="(max-width:375px)">
                             <source
-                                srcset="/static/images/partners/partners-apple.png, /static/images/partners/partners-apple-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-apple.png, /project-1/static/images/partners/partners-apple-2x.png 2x"
                                 media="(max-width:640px)">
                             <source
-                                srcset="/static/images/partners/partners-apple-tablet.png, /static/images/partners/partners-apple-tablet-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-apple-tablet.png, /project-1/static/images/partners/partners-apple-tablet-2x.png 2x"
                                 media="(max-width:768px)">
-                            <img src="/static/images/partners/partners-apple.png"
-                                srcset="/static/images/partners/partners-apple.png, /static/images/partners/partners-apple-2x.png 2x"
+                            <img src="/project-1/static/images/partners/partners-apple.png"
+                                srcset="/project-1/static/images/partners/partners-apple.png, /project-1/static/images/partners/partners-apple-2x.png 2x"
                                 alt="partners apple" width="179" height="61">
                         </picture>
                     </a>
@@ -333,16 +333,16 @@
                         <span class="visibility-hidden">Follow to partner</span>
                         <picture class="parters__img">
                             <source
-                                srcset="/static/images/partners/partners-eltex-mobile.png, /static/images/partners/partners-eltex-mobile-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-eltex-mobile.png, /project-1/static/images/partners/partners-eltex-mobile-2x.png 2x"
                                 media="(max-width:375px)">
                             <source
-                                srcset="/static/images/partners/partners-eltex.png, /static/images/partners/partners-eltex-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-eltex.png, /project-1/static/images/partners/partners-eltex-2x.png 2x"
                                 media="(max-width:640px)">
                             <source
-                                srcset="/static/images/partners/partners-eltex-tablet.png, /static/images/partners/partners-eltex-tablet-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-eltex-tablet.png, /project-1/static/images/partners/partners-eltex-tablet-2x.png 2x"
                                 media="(max-width:768px)">
-                            <img src="/static/images/partners/partners-eltex.png"
-                                srcset="/static/images/partners/partners-eltex.png, /static/images/partners/partners-eltex-2x.png 2x"
+                            <img src="/project-1/static/images/partners/partners-eltex.png"
+                                srcset="/project-1/static/images/partners/partners-eltex.png, /project-1/static/images/partners/partners-eltex-2x.png 2x"
                                 alt="partners eltex" width="216" height="46">
                         </picture>
                     </a>
@@ -352,16 +352,16 @@
                         <span class="visibility-hidden">Follow to partner</span>
                         <picture class="parters__img">
                             <source
-                                srcset="/static/images/partners/partners-owox-mobile.png, /static/images/partners/partners-owox-mobile-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-owox-mobile.png, /project-1/static/images/partners/partners-owox-mobile-2x.png 2x"
                                 media="(max-width:375px)">
                             <source
-                                srcset="/static/images/partners/partners-owox.png, /static/images/partners/partners-owox-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-owox.png, /project-1/static/images/partners/partners-owox-2x.png 2x"
                                 media="(max-width:640px)">
                             <source
-                                srcset="/static/images/partners/partners-owox-tablet.png, /static/images/partners/partners-owox-tablet-2x.png 2x"
+                                srcset="/project-1/static/images/partners/partners-owox-tablet.png, /project-1/static/images/partners/partners-owox-tablet-2x.png 2x"
                                 media="(max-width:768px)">
-                            <img src="/static/images/partners/partners-owox.png"
-                                srcset="/static/images/partners/partners-owox.png, /static/images/partners/partners-owox-2x.png 2x"
+                            <img src="/project-1/static/images/partners/partners-owox.png"
+                                srcset="/project-1/static/images/partners/partners-owox.png, /project-1/static/images/partners/partners-owox-2x.png 2x"
                                 alt="partners owox" width="211" height="40">
                         </picture>
                     </a>
@@ -508,7 +508,7 @@
         <h2 class="visibility-hidden">Popup contacy us</h2>
         <form class="popup__form" action="#">
             <button type="button" class="popup__close popup__close_js" aria-label="Click on Close" title="Close">
-                <img class="" src="/static/images/close.png" alt="close" width="15" height="15"></button>
+                <img class="" src="/project-1/static/images/close.png" alt="close" width="15" height="15"></button>
             <div class="popup__item">
                 <label class="popup__label" for="name">Name</label>
                 <input class="popup__input" type="text" id="name" aria-label="Click on Name" title="Name">
