--- a/pages/grid/index.html
+++ b/pages/grid/index.html
@@ -18,34 +18,34 @@
     <header class="header container">
     <a href="/" class="header__logo-link" aria-label="Go to Home" title="Home">
         <picture class="header__logo">
-            <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                 media="(max-width:640px)">
-            <source srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                 media="(max-width:1023px)">
-            <img src="/static/images/logo.png" srcset="/static/images/logo.png, /static/images/logo-2x.png 2x"
+            <img src="/project-1/static/images/logo.png" srcset="/project-1/static/images/logo.png, /project-1/static/images/logo-2x.png 2x"
                 alt="Site logo" width="100" height="52">
         </picture>
     </a>
     <nav aria-label="Навигация по сайту" class="header__nav">
         <ul class="header__list">
             <li class="header__item">
-                <a href="/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
+                <a href="/project-1/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
+                <a href="/project-1/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
             </li>
             <li class="header__item">
-                <a href="/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
+                <a href="/project-1/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/animation" class="header__link" aria-label="Go to Animation"
+                <a href="/project-1/pages/animation" class="header__link" aria-label="Go to Animation"
                     title="Animation">Animation</a>
             </li>
             <li class="header__item">
-                <a href="/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                <a href="/project-1/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
             </li>
             <li class="header__item">
-                <a href="/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
+                <a href="/project-1/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
             </li>
         </ul>
     </nav>
@@ -53,10 +53,10 @@
         MENU
     </button>
     <button class="header__search" type="button">
-        <img src="/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
+        <img src="/project-1/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
             title="Search" width="17" height="17">
     </button>
-    <a href="/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
+    <a href="/project-1/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
         Us</a>
 
 
@@ -65,10 +65,10 @@
             <div class="mobile-header__header">
                 <a href="/" class="moblie-header__logo-link" aria-label="Go to Home" title="Home">
                     <picture class="mobile-header__logo">
-                        <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+                        <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                             media="(max-width:526px)">
-                        <img src="/static/images/logo-tablet.png"
-                            srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+                        <img src="/project-1/static/images/logo-tablet.png"
+                            srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                             alt="Site logo" width="62" height="32">
                     </picture>
                 </a>
@@ -80,7 +80,7 @@
                     </svg>
                 </button>
                 <button class="mobile-header__search" type="button">
-                    <img src="/static/images/search.png" class="mobile-header__search-img" alt="search"
+                    <img src="/project-1/static/images/search.png" class="mobile-header__search-img" alt="search"
                         aria-label="Go to Search" title="Search" width="17" height="17">
                 </button>
             </div>
@@ -88,31 +88,30 @@
                 <nav aria-label="Мобильная навигация по сайту" class="mobile-header__nav">
                     <ul class="mobile-header__list">
                         <li class="mobile-header__item">
-                            <a href="/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
+                            <a href="/project-1/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
                                 title="Catalog">Catalog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/" class="mobile-header__link" aria-label="Go to About Us" title="About Us">About
-                                Us</a>
+                            <a href="/project-1/pages/toys" class="mobile-header__link" aria-label="Go to About Us" title="About Us">Toys</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
+                            <a href="/project-1/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
                                 title="Blog">Blog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
+                            <a href="/project-1/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
                                 title="Animation">Animation</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                            <a href="/project-1/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
+                            <a href="/project-1/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
                                 title="Grid">Grid</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
+                <a href="/project-1/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
                     title="Contact Us">Contact Us</a>
             </div>
         </div>
@@ -305,7 +304,7 @@
                     <a class="footer-navigation__link" href="#" aria-label="Go to About Us" title="About Us">About Us</a>
                 </li>
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Design Services" title="Design Services">Design Services</a>
@@ -326,7 +325,7 @@
             <h2>Customer Information</h2>
             <ul class="footer-navigation__list">
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Sale Exclusions" title="Sale Exclusions">Sale Exclusions</a>
