--- a/index.html
+++ b/index.html
@@ -17,34 +17,34 @@
     <header class="header container">
     <a href="/" class="header__logo-link" aria-label="Go to Home" title="Home">
         <picture class="header__logo">
-            <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                 media="(max-width:640px)">
-            <source srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                 media="(max-width:1023px)">
-            <img src="/static/images/logo.png" srcset="/static/images/logo.png, /static/images/logo-2x.png 2x"
+            <img src="/project-1/static/images/logo.png" srcset="/project-1/static/images/logo.png, /project-1/static/images/logo-2x.png 2x"
                 alt="Site logo" width="100" height="52">
         </picture>
     </a>
     <nav aria-label="Навигация по сайту" class="header__nav">
         <ul class="header__list">
             <li class="header__item">
-                <a href="/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
+                <a href="/project-1/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
+                <a href="/project-1/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
             </li>
             <li class="header__item">
-                <a href="/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
+                <a href="/project-1/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/animation" class="header__link" aria-label="Go to Animation"
+                <a href="/project-1/pages/animation" class="header__link" aria-label="Go to Animation"
                     title="Animation">Animation</a>
             </li>
             <li class="header__item">
-                <a href="/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                <a href="/project-1/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
             </li>
             <li class="header__item">
-                <a href="/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
+                <a href="/project-1/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
             </li>
         </ul>
     </nav>
@@ -52,10 +52,10 @@
         MENU
     </button>
     <button class="header__search" type="button">
-        <img src="/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
+        <img src="/project-1/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
             title="Search" width="17" height="17">
     </button>
-    <a href="/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
+    <a href="/project-1/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
         Us</a>
 
 
@@ -64,10 +64,10 @@
             <div class="mobile-header__header">
                 <a href="/" class="moblie-header__logo-link" aria-label="Go to Home" title="Home">
                     <picture class="mobile-header__logo">
-                        <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+                        <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                             media="(max-width:526px)">
-                        <img src="/static/images/logo-tablet.png"
-                            srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+                        <img src="/project-1/static/images/logo-tablet.png"
+                            srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                             alt="Site logo" width="62" height="32">
                     </picture>
                 </a>
@@ -79,7 +79,7 @@
                     </svg>
                 </button>
                 <button class="mobile-header__search" type="button">
-                    <img src="/static/images/search.png" class="mobile-header__search-img" alt="search"
+                    <img src="/project-1/static/images/search.png" class="mobile-header__search-img" alt="search"
                         aria-label="Go to Search" title="Search" width="17" height="17">
                 </button>
             </div>
@@ -87,31 +87,30 @@
                 <nav aria-label="Мобильная навигация по сайту" class="mobile-header__nav">
                     <ul class="mobile-header__list">
                         <li class="mobile-header__item">
-                            <a href="/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
+                            <a href="/project-1/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
                                 title="Catalog">Catalog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/" class="mobile-header__link" aria-label="Go to About Us" title="About Us">About
-                                Us</a>
+                            <a href="/project-1/pages/toys" class="mobile-header__link" aria-label="Go to About Us" title="About Us">Toys</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
+                            <a href="/project-1/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
                                 title="Blog">Blog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
+                            <a href="/project-1/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
                                 title="Animation">Animation</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                            <a href="/project-1/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
+                            <a href="/project-1/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
                                 title="Grid">Grid</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
+                <a href="/project-1/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
                     title="Contact Us">Contact Us</a>
             </div>
         </div>
@@ -151,7 +150,7 @@
                             srcset="/project-1/static/images/one-image-slider-tablet.png, /project-1/static/images/one-image-slider-tablet-2x.png 2x"
                             media="(max-width:768px)">
                         <img src="/project-1/static/images/one-image-slider.png"
-                            srcset="/static/images/one-image-slider.png, /project-1/static/images/one-image-slider-2x.png 2x"
+                            srcset="/project-1/static/images/one-image-slider.png, /project-1/static/images/one-image-slider-2x.png 2x"
                             alt="images slider" width="635" height="461">
                     </picture>
                 </div>
@@ -169,9 +168,9 @@
                     <div class="category-slider">
     <div class="category-slider__img-wrapper">
         <picture class="category-slider__img">
-            <source srcset="/static/images/image-1-mobile.jpg, /static/images/image-1-mobile-2x.jpg 2x" media="(max-width:640px)">
-            <source srcset="/static/images/image-1-tablet.jpg, /static/images/image-1-tablet-2x.jpg 2x" media="(max-width:1023px)">
-            <img src="/static/images/image-1.jpg" srcset="/static/images/image-1.jpg, /static/images/image-1-2x.jpg 2x" alt="APPAREL KIDS"
+            <source srcset="/project-1/static/images/image-1-mobile.jpg, /project-1/static/images/image-1-mobile-2x.jpg 2x" media="(max-width:640px)">
+            <source srcset="/project-1/static/images/image-1-tablet.jpg, /project-1/static/images/image-1-tablet-2x.jpg 2x" media="(max-width:1023px)">
+            <img src="/project-1/static/images/image-1.jpg" srcset="/project-1/static/images/image-1.jpg, /project-1/static/images/image-1-2x.jpg 2x" alt="APPAREL KIDS"
                 width="320" height="270">
         </picture>
     </div>
@@ -184,9 +183,9 @@
                     <div class="category-slider">
     <div class="category-slider__img-wrapper">
         <picture class="category-slider__img">
-            <source srcset="/static/images/image-2-mobile.jpg, /static/images/image-2-mobile-2x.jpg 2x" media="(max-width:640px)">
-            <source srcset="/static/images/image-2-tablet.jpg, /static/images/image-2-tablet-2x.jpg 2x" media="(max-width:1023px)">
-            <img src="/static/images/image-2.jpg" srcset="/static/images/image-2.jpg, /static/images/image-2-2x.jpg 2x" alt="HOLIDAY SHOP"
+            <source srcset="/project-1/static/images/image-2-mobile.jpg, /project-1/static/images/image-2-mobile-2x.jpg 2x" media="(max-width:640px)">
+            <source srcset="/project-1/static/images/image-2-tablet.jpg, /project-1/static/images/image-2-tablet-2x.jpg 2x" media="(max-width:1023px)">
+            <img src="/project-1/static/images/image-2.jpg" srcset="/project-1/static/images/image-2.jpg, /project-1/static/images/image-2-2x.jpg 2x" alt="HOLIDAY SHOP"
                 width="320" height="270">
         </picture>
     </div>
@@ -199,9 +198,9 @@
                     <div class="category-slider">
     <div class="category-slider__img-wrapper">
         <picture class="category-slider__img">
-            <source srcset="/static/images/image-3-mobile.jpg, /static/images/image-3-mobile-2x.jpg 2x" media="(max-width:640px)">
-            <source srcset="/static/images/image-3-tablet.jpg, /static/images/image-3-tablet-2x.jpg 2x" media="(max-width:1023px)">
-            <img src="/static/images/image-3.jpg" srcset="/static/images/image-3.jpg, /static/images/image-3-2x.jpg 2x" alt="TOYS"
+            <source srcset="/project-1/static/images/image-3-mobile.jpg, /project-1/static/images/image-3-mobile-2x.jpg 2x" media="(max-width:640px)">
+            <source srcset="/project-1/static/images/image-3-tablet.jpg, /project-1/static/images/image-3-tablet-2x.jpg 2x" media="(max-width:1023px)">
+            <img src="/project-1/static/images/image-3.jpg" srcset="/project-1/static/images/image-3.jpg, /project-1/static/images/image-3-2x.jpg 2x" alt="TOYS"
                 width="320" height="270">
         </picture>
     </div>
@@ -214,9 +213,9 @@
                     <div class="category-slider">
     <div class="category-slider__img-wrapper">
         <picture class="category-slider__img">
-            <source srcset="/static/images/image-4-mobile.jpg, /static/images/image-4-mobile-2x.jpg 2x" media="(max-width:640px)">
-            <source srcset="/static/images/image-4-tablet.jpg, /static/images/image-4-tablet-2x.jpg 2x" media="(max-width:1023px)">
-            <img src="/static/images/image-4.jpg" srcset="/static/images/image-4.jpg, /static/images/image-4-2x.jpg 2x" alt="ACCESSORIES"
+            <source srcset="/project-1/static/images/image-4-mobile.jpg, /project-1/static/images/image-4-mobile-2x.jpg 2x" media="(max-width:640px)">
+            <source srcset="/project-1/static/images/image-4-tablet.jpg, /project-1/static/images/image-4-tablet-2x.jpg 2x" media="(max-width:1023px)">
+            <img src="/project-1/static/images/image-4.jpg" srcset="/project-1/static/images/image-4.jpg, /project-1/static/images/image-4-2x.jpg 2x" alt="ACCESSORIES"
                 width="320" height="270">
         </picture>
     </div>
@@ -401,7 +400,7 @@
                     <a class="footer-navigation__link" href="#" aria-label="Go to About Us" title="About Us">About Us</a>
                 </li>
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Design Services" title="Design Services">Design Services</a>
@@ -422,7 +421,7 @@
             <h2>Customer Information</h2>
             <ul class="footer-navigation__list">
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Sale Exclusions" title="Sale Exclusions">Sale Exclusions</a>
