--- a/pages/toys/index.html
+++ b/pages/toys/index.html
@@ -18,34 +18,34 @@
     <header class="header container">
     <a href="/" class="header__logo-link" aria-label="Go to Home" title="Home">
         <picture class="header__logo">
-            <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                 media="(max-width:640px)">
-            <source srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+            <source srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                 media="(max-width:1023px)">
-            <img src="/static/images/logo.png" srcset="/static/images/logo.png, /static/images/logo-2x.png 2x"
+            <img src="/project-1/static/images/logo.png" srcset="/project-1/static/images/logo.png, /project-1/static/images/logo-2x.png 2x"
                 alt="Site logo" width="100" height="52">
         </picture>
     </a>
     <nav aria-label="Навигация по сайту" class="header__nav">
         <ul class="header__list">
             <li class="header__item">
-                <a href="/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
+                <a href="/project-1/pages/catalog" class="header__link" aria-label="Go to Catalog" title="Catalog">Catalog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
+                <a href="/project-1/pages/toys" class="header__link" aria-label="Go to About Us" title="About Us">Toys</a>
             </li>
             <li class="header__item">
-                <a href="/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
+                <a href="/project-1/pages/blog" class="header__link" aria-label="Go to Blog" title="Blog">Blog</a>
             </li>
             <li class="header__item">
-                <a href="/pages/animation" class="header__link" aria-label="Go to Animation"
+                <a href="/project-1/pages/animation" class="header__link" aria-label="Go to Animation"
                     title="Animation">Animation</a>
             </li>
             <li class="header__item">
-                <a href="/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                <a href="/project-1/pages/svg" class="header__link" aria-label="Go to Svg" title="Svg">Svg</a>
             </li>
             <li class="header__item">
-                <a href="/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
+                <a href="/project-1/pages/grid" class="header__link" aria-label="Go to Grid" title="Grid">Grid</a>
             </li>
         </ul>
     </nav>
@@ -53,10 +53,10 @@
         MENU
     </button>
     <button class="header__search" type="button">
-        <img src="/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
+        <img src="/project-1/static/images/search.png" class="header__search-img" alt="search" aria-label="Go to Search"
             title="Search" width="17" height="17">
     </button>
-    <a href="/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
+    <a href="/project-1/pages/contact-us" class="header__contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact
         Us</a>
 
 
@@ -65,10 +65,10 @@
             <div class="mobile-header__header">
                 <a href="/" class="moblie-header__logo-link" aria-label="Go to Home" title="Home">
                     <picture class="mobile-header__logo">
-                        <source srcset="/static/images/logo-mobile.png, /static/images/logo-mobile-2x.png 2x"
+                        <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                             media="(max-width:526px)">
-                        <img src="/static/images/logo-tablet.png"
-                            srcset="/static/images/logo-tablet.png, /static/images/logo-tablet-2x.png 2x"
+                        <img src="/project-1/static/images/logo-tablet.png"
+                            srcset="/project-1/static/images/logo-tablet.png, /project-1/static/images/logo-tablet-2x.png 2x"
                             alt="Site logo" width="62" height="32">
                     </picture>
                 </a>
@@ -80,7 +80,7 @@
                     </svg>
                 </button>
                 <button class="mobile-header__search" type="button">
-                    <img src="/static/images/search.png" class="mobile-header__search-img" alt="search"
+                    <img src="/project-1/static/images/search.png" class="mobile-header__search-img" alt="search"
                         aria-label="Go to Search" title="Search" width="17" height="17">
                 </button>
             </div>
@@ -88,31 +88,30 @@
                 <nav aria-label="Мобильная навигация по сайту" class="mobile-header__nav">
                     <ul class="mobile-header__list">
                         <li class="mobile-header__item">
-                            <a href="/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
+                            <a href="/project-1/pages/catalog" class="mobile-header__link" aria-label="Go to Catalog"
                                 title="Catalog">Catalog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/" class="mobile-header__link" aria-label="Go to About Us" title="About Us">About
-                                Us</a>
+                            <a href="/project-1/pages/toys" class="mobile-header__link" aria-label="Go to About Us" title="About Us">Toys</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
+                            <a href="/project-1/pages/blog" class="mobile-header__link" aria-label="Go to Blog"
                                 title="Blog">Blog</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
+                            <a href="/project-1/pages/animation" class="mobile-header__link" aria-label="Go to Animation"
                                 title="Animation">Animation</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
+                            <a href="/project-1/pages/svg" class="mobile-header__link" aria-label="Go to Svg" title="Svg">Svg</a>
                         </li>
                         <li class="mobile-header__item">
-                            <a href="/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
+                            <a href="/project-1/pages/grid" class="mobile-header__link" aria-label="Go to Grid"
                                 title="Grid">Grid</a>
                         </li>
                     </ul>
                 </nav>
-                <a href="/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
+                <a href="/project-1/pages/contact-us" class="mobile-header__contact-us" aria-label="Go to Contact Us"
                     title="Contact Us">Contact Us</a>
             </div>
         </div>
@@ -215,9 +214,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-mobile.jpg, /static/images/toys-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-tablet.jpg, /static/images/toys-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys.jpg" srcset="/static/images/toys.jpg, /static/images/toys-2x.jpg 2x" alt="Sharky"
+                <source srcset="/project-1/static/images/toys-mobile.jpg, /project-1/static/images/toys-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-tablet.jpg, /project-1/static/images/toys-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys.jpg" srcset="/project-1/static/images/toys.jpg, /project-1/static/images/toys-2x.jpg 2x" alt="Sharky"
                     width="380" height="385">
             </picture>
         </div>
@@ -231,9 +230,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-2-mobile.jpg, /static/images/toys-2-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-2-tablet.jpg, /static/images/toys-2-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys-2.jpg" srcset="/static/images/toys-2.jpg, /static/images/toys-2-2x.jpg 2x" alt="Brass"
+                <source srcset="/project-1/static/images/toys-2-mobile.jpg, /project-1/static/images/toys-2-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-2-tablet.jpg, /project-1/static/images/toys-2-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys-2.jpg" srcset="/project-1/static/images/toys-2.jpg, /project-1/static/images/toys-2-2x.jpg 2x" alt="Brass"
                     width="380" height="385">
             </picture>
         </div>
@@ -247,9 +246,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-3-mobile.jpg, /static/images/toys-3-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-3-tablet.jpg, /static/images/toys-3-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys-3.jpg" srcset="/static/images/toys-3.jpg, /static/images/toys-3-2x.jpg 2x" alt="Cibo"
+                <source srcset="/project-1/static/images/toys-3-mobile.jpg, /project-1/static/images/toys-3-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-3-tablet.jpg, /project-1/static/images/toys-3-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys-3.jpg" srcset="/project-1/static/images/toys-3.jpg, /project-1/static/images/toys-3-2x.jpg 2x" alt="Cibo"
                     width="380" height="385">
             </picture>
         </div>
@@ -263,9 +262,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-4-mobile.jpg, /static/images/toys-4-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-4-tablet.jpg, /static/images/toys-4-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys-4.jpg" srcset="/static/images/toys-4.jpg, /static/images/toys-4-2x.jpg 2x" alt="Gatcha"
+                <source srcset="/project-1/static/images/toys-4-mobile.jpg, /project-1/static/images/toys-4-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-4-tablet.jpg, /project-1/static/images/toys-4-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys-4.jpg" srcset="/project-1/static/images/toys-4.jpg, /project-1/static/images/toys-4-2x.jpg 2x" alt="Gatcha"
                     width="380" height="385">
             </picture>
         </div>
@@ -279,9 +278,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-5-mobile.jpg, /static/images/toys-5-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-5-tablet.jpg, /static/images/toys-5-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys-5.jpg" srcset="/static/images/toys-5.jpg, /static/images/toys-5-2x.jpg 2x" alt="Christmas"
+                <source srcset="/project-1/static/images/toys-5-mobile.jpg, /project-1/static/images/toys-5-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-5-tablet.jpg, /project-1/static/images/toys-5-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys-5.jpg" srcset="/project-1/static/images/toys-5.jpg, /project-1/static/images/toys-5-2x.jpg 2x" alt="Christmas"
                     width="380" height="385">
             </picture>
         </div>
@@ -295,9 +294,9 @@
     <a class="toys-card__link" href="#" aria-label="Click on Learn more" title="Learn more">
         <div class="toys-card__img-wrapper">
             <picture class="toys-card__img">
-                <source srcset="/static/images/toys-6-mobile.jpg, /static/images/toys-6-mobile-2x.jpg 2x" media="(max-width:640px)">
-                <source srcset="/static/images/toys-6-tablet.jpg, /static/images/toys-6-tablet-2x.jpg 2x" media="(max-width:1023px)">
-                <img src="/static/images/toys-6.jpg" srcset="/static/images/toys-6.jpg, /static/images/toys-6-2x.jpg 2x" alt="Tangle"
+                <source srcset="/project-1/static/images/toys-6-mobile.jpg, /project-1/static/images/toys-6-mobile-2x.jpg 2x" media="(max-width:640px)">
+                <source srcset="/project-1/static/images/toys-6-tablet.jpg, /project-1/static/images/toys-6-tablet-2x.jpg 2x" media="(max-width:1023px)">
+                <img src="/project-1/static/images/toys-6.jpg" srcset="/project-1/static/images/toys-6.jpg, /project-1/static/images/toys-6-2x.jpg 2x" alt="Tangle"
                     width="380" height="385">
             </picture>
         </div>
@@ -347,7 +346,7 @@
                     <a class="footer-navigation__link" href="#" aria-label="Go to About Us" title="About Us">About Us</a>
                 </li>
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/blog" aria-label="Go to Blog" title="Blog">Blog</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Design Services" title="Design Services">Design Services</a>
@@ -368,7 +367,7 @@
             <h2>Customer Information</h2>
             <ul class="footer-navigation__list">
                 <li class="footer-navigation__items">
-                    <a class="footer-navigation__link" href="/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
+                    <a class="footer-navigation__link" href="/project-1/pages/contact-us" aria-label="Go to Contact Us" title="Contact Us">Contact Us</a>
                 </li>
                 <li class="footer-navigation__items">
                     <a class="footer-navigation__link" href="#" aria-label="Go to Sale Exclusions" title="Sale Exclusions">Sale Exclusions</a>
