--- a/pages/toys/index.html
+++ b/pages/toys/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link href="/common.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/static/fonts/stylesheet.css" />
-    <link rel="shortcut icon" href="/static/images/favicon.ico" />
+    <link href="/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/project-1/static/fonts/stylesheet.css" />
+    <link rel="shortcut icon" href="/project-1/static/images/favicon.ico" />
     <title>TOYS</title>
     <meta name="description" content="Toys" />
 
@@ -125,7 +125,7 @@
                 <a class="navigation__link" href="/" aria-label="Go to Home" title="Home">Home</a>
             </li>
             <li class="navigation__item">
-                <a class="navigation__link" href="/pages/catalog" aria-label="Go to Catalog" title="Catalog">Catalog</a>
+                <a class="navigation__link" href="/project-1/pages/catalog" aria-label="Go to Catalog" title="Catalog">Catalog</a>
             </li>
             <li>
                 <a class="navigation__link navigation__link_disabled" tabindex="1" href="#">Toys</a>
