--- a/pages/toys/index.html
+++ b/pages/toys/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" />
     <link href="/common.css" rel="stylesheet" />
-    <link href="/style.css" rel="stylesheet" />
+    <link href="https://dukalisss.github.io/project-1/pages/toys/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="/project-1/static/fonts/stylesheet.css" />
     <link rel="shortcut icon" href="/project-1/static/images/favicon.ico" />
     <title>TOYS</title>
