--- a/pages/grid/index.html
+++ b/pages/grid/index.html
@@ -141,13 +141,13 @@
                 <div class="one__img-inner">
                     <picture class="one__img">
                         <source
-                            srcset="/static/images/grid/block-1-mobile.png 272w, /static/images/grid/block-1-mobile-2x.png 544w"
+                            srcset="/project-1/static/images/grid/block-1-mobile.png 272w, /project-1/ static/images/grid/block-1-mobile-2x.png 544w"
                             media="(max-width:640px)" sizes="272px">
                         <source
-                            srcset="/static/images/grid/block-1-tablet.png 249w, /static/images/grid/block-1-tablet-2x.png 498w"
+                            srcset="/project-1/static/images/grid/block-1-tablet.png 249w, /project-1/static/images/grid/block-1-tablet-2x.png 498w"
                             media="(max-width:1023px)" sizes="249px">
                         <img src="/static/images/grid/block-1.png"
-                            srcset="/static/images/grid/block-1.png 249w, /static/images/grid/block-1-2x.png 498w"
+                            srcset="/project-1/static/images/grid/block-1.png 249w, /project-1/static/images/grid/block-1-2x.png 498w"
                             alt="phone" sizes="249px">
                     </picture>
 
@@ -164,13 +164,13 @@
                 <div class="three__content">
                     <picture class="three__img">
                         <source
-                            srcset="/static/images/grid/block-3-mobile.png, /static/images/grid/block-3-mobile-2x.png 2x"
+                            srcset="/project-1/project-1/static/images/grid/block-3-mobile.png, /project-1/static/images/grid/block-3-mobile-2x.png 2x"
                             media="(max-width:640px)">
                         <source
-                            srcset="/static/images/grid/block-3-tablet.png, /static/images/grid/block-3-tablet-2x.png 2x"
+                            srcset="/project-1/static/images/grid/block-3-tablet.png, /project-1/static/images/grid/block-3-tablet-2x.png 2x"
                             media="(max-width:1023px)">
-                        <img src="/static/images/grid/block-3.png"
-                            srcset="/static/images/grid/block-3.png, /static/images/grid/block-3-2x.png 2x" alt="phone"
+                        <img src="/project-1/static/images/grid/block-3.png"
+                            srcset="/project-1/static/images/grid/block-3.png, /project-1/static/images/grid/block-3-2x.png 2x" alt="phone"
                             width="314" height="164">
                     </picture>
                     <p class="three__title">Our Brand New Keyboard</p>
@@ -193,13 +193,13 @@
                     <div class="four__inner-3">
                         <picture class="four__img">
                             <source
-                                srcset="/static/images/grid/block-4-mobile.png 375w, /static/images/grid/block-4-mobile-2x.png 750w"
+                                srcset="/project-1/static/images/grid/block-4-mobile.png 375w, /project-1/static/images/grid/block-4-mobile-2x.png 750w"
                                 media="(max-width:640px)" sizes="375px">
                             <source
-                                srcset="/static/images/grid/block-4-tablet.png 420w, /static/images/grid/block-4-tablet-2x.png 840w"
+                                srcset="/project-1/static/images/grid/block-4-tablet.png 420w, /project-1/static/images/grid/block-4-tablet-2x.png 840w"
                                 media="(max-width:1023px)" sizes="420px">
-                            <img src="/static/images/grid/block-4.png"
-                                srcset="/static/images/grid/block-4.png 352w, /static/images/grid/block-4-2x.png 704w"
+                            <img src="/project-1/static/images/grid/block-4.png"
+                                srcset="/project-1/static/images/grid/block-4.png 352w, /project-1/static/images/grid/block-4-2x.png 704w"
                                 alt="tv" sizes="352px">
                         </picture>
 
@@ -212,13 +212,13 @@
                         <span class="five__text">POPULAR</span>
                         <picture class="five__img">
                             <source
-                                srcset="/static/images/grid/block-5-mobile.png, /static/images/grid/block-5-mobile-2x.png 2x"
+                                srcset="/project-1/static/images/grid/block-5-mobile.png, /project-1/static/images/grid/block-5-mobile-2x.png 2x"
                                 media="(max-width:640px)">
                             <source
-                                srcset="/static/images/grid/block-5-tablet.png, /static/images/grid/block-5-tablet-2x.png 2x"
+                                srcset="/project-1/static/images/grid/block-5-tablet.png, /project-1/static/images/grid/block-5-tablet-2x.png 2x"
                                 media="(max-width:1023px)">
-                            <img src="/static/images/grid/block-5.png"
-                                srcset="/static/images/grid/block-5.png, /static/images/grid/block-5-2x.png 2x"
+                            <img src="/project-1/static/images/grid/block-5.png"
+                                srcset="/project-1/static/images/grid/block-5.png, /project-1/static/images/grid/block-5-2x.png 2x"
                                 alt="iCloud" width="180" height="186">
                         </picture>
                         <span class="five__subtext">MEET</span>
@@ -234,13 +234,13 @@
                 <p class="six__title">Much MuchBetter Experience</p>
                 <picture class="six__img">
                     <source
-                        srcset="/static/images/grid/block-6-mobile.png, /static/images/grid/block-6-mobile-2x.png 2x"
+                        srcset="/project-1/static/images/grid/block-6-mobile.png, /project-1/static/images/grid/block-6-mobile-2x.png 2x"
                         media="(max-width:640px)">
                     <source
-                        srcset="/static/images/grid/block-6-tablet.png, /static/images/grid/block-6-tablet-2x.png 2x"
+                        srcset="/project-1/static/images/grid/block-6-tablet.png, /project-1/static/images/grid/block-6-tablet-2x.png 2x"
                         media="(max-width:1023px)">
-                    <img src="/static/images/grid/block-6.png"
-                        srcset="/static/images/grid/block-6.png, /static/images/grid/block-6-2x.png 2x" alt="Much"
+                    <img src="/project-1/static/images/grid/block-6.png"
+                        srcset="/project-1/static/images/grid/block-6.png, /project-1/static/images/grid/block-6-2x.png 2x" alt="Much"
                         width="700" height="275">
                 </picture>
             </div>
@@ -248,13 +248,13 @@
                 <div class="seven__content">
                     <picture class="seven__img">
                         <source
-                            srcset="/static/images/grid/block-7-mobile.png, /static/images/grid/block-7-mobile-2x.png 2x"
+                            srcset="/project-1/static/images/grid/block-7-mobile.png, /project-1/static/images/grid/block-7-mobile-2x.png 2x"
                             media="(max-width:640px)">
                         <source
-                            srcset="/static/images/grid/block-7-tablet.png, /static/images/grid/block-7-tablet-2x.png 2x"
+                            srcset="/project-1/static/images/grid/block-7-tablet.png, /project-1/static/images/grid/block-7-tablet-2x.png 2x"
                             media="(max-width:1023px)">
-                        <img src="/static/images/grid/block-7.png"
-                            srcset="/static/images/grid/block-7.png, /static/images/grid/block-7-2x.png 2x" alt="game"
+                        <img src="/project-1/static/images/grid/block-7.png"
+                            srcset="/project-1/static/images/grid/block-7.png, /project-1/static/images/grid/block-7-2x.png 2x" alt="game"
                             width="303" height="167">
                     </picture>
                     <p class="seven__title">Games ourpasion</p>
@@ -265,13 +265,13 @@
                 <div class="eight__content">
                     <picture class="eight__img">
                         <source
-                            srcset="/static/images/grid/block-8-mobile.png, /static/images/grid/block-8-mobile-2x.png 2x"
+                            srcset="/project-1/static/images/grid/block-8-mobile.png, /project-1/static/images/grid/block-8-mobile-2x.png 2x"
                             media="(max-width:640px)">
                         <source
-                            srcset="/static/images/grid/block-8-tablet.png, /static/images/grid/block-8-tablet-2x.png 2x"
+                            srcset="/project-1/static/images/grid/block-8-tablet.png, /project-1/static/images/grid/block-8-tablet-2x.png 2x"
                             media="(max-width:1023px)">
-                        <img src="/static/images/grid/block-8.png"
-                            srcset="/static/images/grid/block-8.png, /static/images/grid/block-8-2x.png 2x"
+                        <img src="/project-1/static/images/grid/block-8.png"
+                            srcset="/project-1/static/images/grid/block-8.png, /project-1/static/images/grid/block-8-2x.png 2x"
                             alt="instagram" width="59" height="59">
                     </picture>
                     <a class="eight__link" href="/" aria-label="Go to Follow me" title="Follow me">Follow me ></a>
@@ -280,13 +280,13 @@
             <div class="grid__nine nine">
                 <picture class="nine__img">
                     <source
-                        srcset="/static/images/grid/block-9-mobile.png 375w, /static/images/grid/block-9-mobile-2x.png 750w"
+                        srcset="/project-1/static/images/grid/block-9-mobile.png 375w, /project-1/static/images/grid/block-9-mobile-2x.png 750w"
                         media="(max-width:640px)" sizes="375px">
                     <source
-                        srcset="/static/images/grid/block-9-tablet.png 271w, /static/images/grid/block-9-tablet-2x.png 542w"
+                        srcset="/project-1/static/images/grid/block-9-tablet.png 271w, /project-1/static/images/grid/block-9-tablet-2x.png 542w"
                         media="(max-width:1023px)" sizes="271px">
-                    <img src="/static/images/grid/block-9.png"
-                        srcset="/static/images/grid/block-9.png 271w, /static/images/grid/block-9-2x.png 542w" alt="tv"
+                    <img src="/project-1/static/images/grid/block-9.png"
+                        srcset="/static/images/grid/block-9.png 271w, /project-1/static/images/grid/block-9-2x.png 542w" alt="tv"
                         sizes="271px">
                 </picture>
                 <span class="nine__title">More than just a display, it’s a vision</span>
