--- a/pages/grid/index.html
+++ b/pages/grid/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header container">
-    <a href="/" class="header__logo-link" aria-label="Go to Home" title="Home">
+    <a href="https://dukalisss.github.io/project-1/" class="header__logo-link" aria-label="Go to Home" title="Home">
         <picture class="header__logo">
             <source srcset="/project-1/static/images/logo-mobile.png, /project-1/static/images/logo-mobile-2x.png 2x"
                 media="(max-width:640px)">
@@ -286,7 +286,7 @@
                         srcset="/project-1/static/images/grid/block-9-tablet.png 271w, /project-1/static/images/grid/block-9-tablet-2x.png 542w"
                         media="(max-width:1023px)" sizes="271px">
                     <img src="/project-1/static/images/grid/block-9.png"
-                        srcset="/static/images/grid/block-9.png 271w, /project-1/static/images/grid/block-9-2x.png 542w" alt="tv"
+                        srcset="/project-1/static/images/grid/block-9.png 271w, /project-1/static/images/grid/block-9-2x.png 542w" alt="tv"
                         sizes="271px">
                 </picture>
                 <span class="nine__title">More than just a display, it’s a vision</span>
